Chapter01 examples